<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0px"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:overScrollMode="always"
    tools:context="com.example.arces.introapp.LayoutActivity"
    tools:showIn="@layout/activity_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorHeader">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:paddingLeft="20dp"
            android:src="@drawable/wildlings"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorHeaderText"
            android:text="@string/title"
            android:textSize="30sp"
            android:gravity="center"
            android:paddingLeft="-50dp"
            />
    </LinearLayout>
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="278dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.9"
            android:background="@color/colorStarkBackground"
            >
            <TextView
                android:id="@+id/starkTitle"

                android:background="@color/colorNameStarkBackground"
                android:paddingTop="10dp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"

                android:text="@string/name_arren_caps"
                android:textSize="20sp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="bold"
                android:textColor="@color/colorNameStarkText"
                />
            <ImageView
                android:id="@+id/starkSigil"
                android:layout_below="@id/starkTitle"

                android:layout_width="180dp"
                android:layout_height="180dp"

                android:layout_centerHorizontal="true"
                android:src="@drawable/stark"
                />

            <Button
                android:layout_below="@id/starkSigil"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:onClick="goStark"
                android:text="@string/read_more_arren"
                android:layout_marginBottom="5dp"
                />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="278dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorLannisterBackground"
            >

            <TextView
                android:id="@+id/lannisterTitle"

                android:background="@color/colorNameLannisterBackground"
                android:paddingTop="10dp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"

                android:text="@string/name_arces_caps"
                android:textSize="20sp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="bold"
                android:textColor="@color/colorNameLannisterText"
                />

            <ImageView
                android:id="@+id/lannisterSigil"
                android:layout_below="@id/lannisterTitle"

                android:layout_width="180dp"
                android:layout_height="180dp"

                android:layout_centerHorizontal="true"
                android:src="@drawable/lannister"
                />

            <Button
                android:layout_below="@id/lannisterSigil"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:onClick="goLannister"
                android:text="@string/read_more_arces"
                android:layout_marginBottom="5dp"
                />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
