<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.arces.introapp.StarkActivity"
    tools:showIn="@layout/activity_stark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorHeader"
        >

        <Button
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:textColor="@color/colorHeaderText"
            android:fontFamily="sans-serif-medium"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/go_back"
            android:background="@color/colorBackButton"
            android:onClick="goBack"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:textStyle="bold"
            android:textColor="@color/colorHeaderText"
            android:text="@string/title"
            android:textSize="30sp"
            android:gravity="center"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:id="@+id/stark_sigil"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@color/colorStarkBackground"
            android:src="@drawable/stark"
            />
        <TextView
            android:id="@+id/stark_page_header"
            android:layout_toRightOf="@id/stark_sigil"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/name_arren_caps"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/colorNameStarkText"
            android:textStyle="bold|italic"
            android:fontFamily="sans-serif-medium"
            android:textSize="30sp"
            android:background="@color/colorNameStarkBackground" />

        <ListView
            android:id="@+id/stark_list"
            android:layout_below="@id/stark_page_header"
            android:layout_width="250dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="60dp"
            android:background="@color/colorListViewBackground"
            android:padding="20dp"
            android:gravity="center_horizontal">
        </ListView>

        <ImageView
            android:id="@+id/stark_robb_avatar"
            android:layout_width="300dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="60dp"
            android:padding="10dp"
            android:layout_toRightOf="@id/stark_list"
            android:layout_below="@id/stark_page_header"
            android:src="@drawable/robbstark"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorMusicPlayer">

            <ImageView
                android:id="@+id/stark_music_player_soundtrack"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:src="@drawable/soundtrack"
                />

            <TextView
                android:id="@+id/stark_music_player_now_playing"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/stark_music_player_soundtrack"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:textSize="10sp"
                android:textColor="@color/colorMusicPlayerText"
                android:text="@string/now_playing"/>

            <TextView
                android:id="@+id/stark_music_player_song_name"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/stark_music_player_soundtrack"
                android:layout_below="@id/stark_music_player_now_playing"
                android:layout_marginLeft="20dp"
                android:textSize="18sp"
                android:textColor="@color/colorMusicPlayerText"
                android:text="@string/stark_song_name"/>

            <!--Button
                android:id="@+id/stark_music_player_play_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_toRightOf="@id/stark_music_player_song_name"
                android:background="@drawable/play"
                /-->

        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
